<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_img_area"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/backimg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

<!--            <ImageView-->
<!--                android:id="@+id/profile_img_area"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:src="@drawable/test" />-->
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lotti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/profile" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/my_video_txt_user_name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/my_video_txt_description"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/constraint_github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_area" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_github"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/constraint_notion"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toTopOf="@id/view_line"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/git_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/github_area"
                android:background="@drawable/github"/>

            <TextView
                android:id="@+id/github_area"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/git_img"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/my_video_txt_github"
                android:textSize="14sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_notion"
            android:layout_width="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraint_github"
            app:layout_constraintBottom_toBottomOf="@id/constraint_github"
            app:layout_constraintStart_toEndOf="@id/constraint_github">
            <ImageView
                android:id="@+id/notion_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/notion_area"
                android:background="@drawable/notion"/>

            <TextView
                android:id="@+id/notion_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/notion_img"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/my_video_txt_notion"
                android:textSize="14sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="@color/lightGray"
            app:layout_constraintBottom_toTopOf="@id/favorite_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_github" />

        <TextView
            android:id="@+id/favorite_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/my_video_txt_favorite_Videos"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/favorite_rv_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorite_rv_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_textview"
            tools:listitem="@layout/item_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>